feat: update account balance based on currency implemented both in grpc and grpc gateway
