# doc/swagger/simple_bank.swagger.json
@@ -95,7 +95,7 @@
     "/v1/list_user_accounts": {
       "get": {
         "summary": "List user accounts",
-        "description": "Used to get the account of the user",
+        "description": "Used to list the accounts of the user",
         "operationId": "Accounts_ListUserAccounts",
         "responses": {
           "200": {
@@ -147,6 +147,38 @@
         ],
         "tags": [
           "Users"
+        ]
+      }
+    },
+    "/v1/update_account_balance": {
+      "put": {
+        "operationId": "Accounts_UpdateAccountBalance",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbUpdateAccountBalanceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbUpdateAccountBalanceRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Accounts"
         ]
       }
     },
@@ -202,6 +234,10 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
+        },
+        "balance": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -295,6 +331,26 @@
         },
         "user": {
           "$ref": "#/definitions/pbUser"
+        }
+      }
+    },
+    "pbUpdateAccountBalanceRequest": {
+      "type": "object",
+      "properties": {
+        "balance": {
+          "type": "string",
+          "format": "int64"
+        },
+        "currency": {
+          "type": "string"
+        }
+      }
+    },
+    "pbUpdateAccountBalanceResponse": {
+      "type": "object",
+      "properties": {
+        "account": {
+          "$ref": "#/definitions/pbAccount"
         }
       }
     },
